# khetai

./: .clang-format  .gitignore  Gemfile  LICENSE.txt  README.md  README_ORIGINAL.md  Rakefile  khetai.gemspec
ext/khetai/: extconf.rb  khetai.c  khetai_lib.c  khetai_lib.h
ext/khetai/dev/: CMakeLists.txt  README.md  khetai  main.c  main.rb
ext/khetai/dev/fltk-ui/: Makefile  Makefile.khetai  README.md  ai_loader.cpp  ai_loader.h  build_khetai.sh  game_board.cpp  game_board.h  game_board_util.cpp  game_board_util.h  hello_fltk.cpp  image_util.cpp  image_util.h  khet.cpp
ext/khetai/dev/sdl-ui/: CMakeLists.txt  README.md  ai.c  ai.h  commands.txt  drawing.c  drawing.h  khet-sdl.c  khet-sdl.h
ext/khetai/dev/sdl-ui/images/: eye-horus.h  play-again.h
lib/: khetai.rb
lib/khetai/: version.rb
